<resources>
    <string name="app_name">OCSChat</string>
    <string name="home">Home</string>
    <string name="no_internet_connection">No internet connection,\nplease connect to the internet and try again</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="add_more_info">Add More Info</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="skip">Skip</string>
    <string name="add">Add</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="education">Education</string>
    <string name="education_examples">e.g Student, Bachelor, PHD</string>
    <string name="education_org">Education Organization</string>
    <string name="education_org_examples">e.g Cairo University</string>
    <string name="major">Major</string>
    <string name="major_examples">e.g Marketing, Computer Science</string>
    <string name="work">Work</string>
    <string name="work_examples">e.g Software Engineer, Teacher</string>
    <string name="company">Company</string>
    <string name="company_examples">e.g Microsoft, Adidas, Pepsi</string>
    <string name="forgot_email_password">Please Enter your email and password</string>
    <string name="forgot_email_password_name">Please Enter your email, name, and password</string>
    <string name="invalid_email">Please enter email with valid format</string>
    <string name="invalid_name">Please enter name consisting of only letters</string>
    <string name="invalid_password">Please enter password of 6 characters or more</string>
    <string name="logged_successfully">Logged Successfully</string>
    <string name="you_are_logged">You are logged successfully</string>
    <string name="error_login">Error occurs while Performing login, please try again later</string>
    <string name="error_register">Error occurs while Performing register, please try again later</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="empty_friends_list">Empty Friends List</string>
    <string name="search_by_name">Search by name</string>
    <string name="friend">Friend</string>
    <string name="friend_added">Friend Added Successfully</string>
    <string name="error_adding_friend">Error occurred while adding Friend</string>
    <string name="error_downloading_image">Error occurred while downloading user image</string>
    <string name="add_friend">Add Friend</string>
    <string name="chat">Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="friend_profile">Friend Profile</string>
    <string name="choose_profile_picture">\tClick here to\nadd profile picture</string>
    <string name="update_profile_picture">\tUpdate\nprofile picture</string>
    <string name="update_picture">Update Picture</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="updating_profile">Updating profile &#8230;</string>
    <string name="adding_friend">Adding friend &#8230;</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="account_updated">Account updated successfully</string>
    <string name="no_changes_to_update">No changes to update</string>
    <string name="friend_email">Friend E-mail</string>
    <string name="opening_email_app_error">Can not find installed app concerned with sending emails</string>
    <string name="enter_email">Enter email of a friend to invite</string>
    <string name="welcome">Welcome,&#160;</string>
    <string name="enter_first_name">Please enter user first name</string>
    <string name="enter_last_name">Please enter user last name</string>
    <string name="enter_valid_age">Please enter valid age</string>
    <string name="not_valid_hasImage_property">Not valid value for hasImage property</string>
    <string name="not_valid_id_property">Not valid value for id property</string>
    <string name="not_valid_user_id_property">Not valid value for userId property</string>
    <string name="not_valid_friend_id_property">Not valid value for friendId property</string>
    <string name="not_valid_friend_state_property">Not valid value for friend state property</string>
    <string name="not_valid_friends_count_property">Not valid value for friends count property</string>
    <string name="signed_in">Signed in successfully</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="new_user_message">Add Friends and start chatting now</string>
    <string name="shared_preferences_error">"Error from shared preferences"</string>
    <string name="saving_image">Saving your profile photo &#8230;</string>
    <string name="image_saved">Your profile photo is saved successfully</string>
    <string name="image_not_saved">Error occurred while saving your profile photo</string>
    <string name="added_no_more_info">If you do not want to add more info, just click SKIP</string>
    <string name="added_more_info">If you want to add more info, just click REGISTER</string>
    <string name="chosen_no_image">If you do not want to add a profile photo, just click SKIP</string>
    <string name="chosen_image">If you want to add a profile photo, just click ADD</string>
    <string name="user_has_no_image_error">User has no image to be downloaded</string>
    <string name="firstname_colon">First name : </string>
    <string name="lastname_colon">Last name : </string>
    <string name="age_colon">Age : </string>
    <string name="education_colon">Education : </string>
    <string name="major_colon">Major : </string>
    <string name="studied_at_colon">Studied at : </string>
    <string name="works_as_colon">Works as : </string>
    <string name="works_at_colon">Works at : </string>
</resources>
