<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_age_edit_text"
            style="@style/RegisterFields"
            android:inputType="number"
            android:hint="@string/age" />

        <EditText
            android:id="@+id/register_education_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/education_examples" />

        <TextView
            style="@style/RegisterFields"
            android:text="@string/education" />

        <EditText
            android:id="@+id/register_education_org_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/education_org_examples" />

        <TextView
            style="@style/RegisterFields"
            android:text="@string/education_org" />

        <EditText
            android:id="@+id/register_major_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/major_examples" />

        <TextView
            style="@style/RegisterFields"
            android:text="@string/major" />

        <EditText
            android:id="@+id/register_work_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/work_examples" />

        <TextView
            style="@style/RegisterFields"
            android:text="@string/work" />

        <EditText
            android:id="@+id/register_company_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/company_examples" />

        <TextView
            style="@style/RegisterFields"
            android:text="@string/company" />

        <TextView
            android:id="@+id/register_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default16_margin"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:textColor="@color/red" />

        <ProgressBar
            android:id="@+id/register_loading_progress_bar"
            android:layout_width="@dimen/progress_bar_dimens"
            android:layout_height="@dimen/progress_bar_dimens"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/register_button"
            style="@style/RegisterFields"
            android:layout_marginTop="@dimen/default16_margin"
            android:text="@string/register" />

        <TextView
            android:id="@+id/click_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default16_margin"
            android:text="@string/click_here_to_login"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>


