<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/register_email_edit_text"
        style="@style/RegisterFields"
        android:hint="@string/email" />

    <LinearLayout
        style="@style/RegisterFields">

        <EditText
            android:id="@+id/register_firstname_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/register_lastname_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name" />

    </LinearLayout>

    <EditText
        android:id="@+id/register_password_edit_text"
        style="@style/RegisterFields"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/register_error_text_view"
        style="@style/RegisterFields"
        android:visibility="gone"
        android:textColor="@color/red" />

    <!-- Postponed functionality -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default16_margin"
        android:visibility="gone">

        <ImageView
            android:id="@+id/register_user_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/person_placeholder"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/choose_image_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_profile_picture" />

    </RelativeLayout>

    <Button
        android:id="@+id/next_button"
        style="@style/RegisterFields"
        android:layout_marginTop="@dimen/default16_margin"
        android:text="@string/next" />

    <TextView
        android:id="@+id/click_login_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default16_margin"
        android:text="@string/click_here_to_login"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

</LinearLayout>


