<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default16_margin" >

            <ImageView
                android:id="@+id/add_photo_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/person_placeholder"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/add_photo_choose_image_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_profile_picture" />

        </RelativeLayout>

        <TextView
            android:id="@+id/add_photo_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default16_margin"
            android:textColor="@color/red"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/add_photo_loading_progress_bar"
            android:layout_width="@dimen/progress_bar_dimens"
            android:layout_height="@dimen/progress_bar_dimens"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default8_margin">

            <Button
                android:id="@+id/add_photo_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:layout_margin="@dimen/default8_margin" />

            <Button
                android:id="@+id/add_photo_skip_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/skip"
                android:layout_margin="@dimen/default8_margin" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
